# go_back/docs/swagger.yaml
@@ -116,6 +116,8 @@ definitions:
         $ref: '#/definitions/handlers.AddressValuationObjectSummary'
       price:
         $ref: '#/definitions/handlers.AddressValuationPriceSummary'
+      report_id:
+        type: string
       text:
         $ref: '#/definitions/handlers.AddressValuationTextSummary'
     type: object
@@ -141,12 +143,46 @@ definitions:
 info:
   contact: {}
 paths:
+  /api/v1/valuation/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Читает сохранённый отчёт из БД и возвращает краткую версию для
+        фронта
+      parameters:
+      - description: ID отчёта (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.AddressValuationResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      summary: Получить краткий отчёт об оценке по ID
+      tags:
+      - valuation
   /api/v1/valuation/address:
     post:
       consumes:
       - application/json
       description: Вызывает ML-сервис RealVal для расчёта рыночной ставки аренды и
-        возвращает краткий отчёт
+        сохраняет полный отчёт
       parameters:
       - description: Параметры квартиры для оценки
         in: body
